[package]
authors = ["Michal Papierski", "Jehan Tremback", "Justin Kilpatrick", "Elvis Dedic"]
description = "Async endian safe web3 library"
edition = "2021"
license = "Apache-2.0"
name = "web30"
repository = "https://github.com/onomyprotocol/web30.git"
version = "0.18.3"

[dependencies]
clarity = "0.5"
futures = "0.3"
hyper = {version = "0.14", features = ["full"]}
hyper-tls = "0.5.0"
lazy_static = "1.4"
log = "0.4"
num = "0.4"
num256 = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "1.4", features = ["macros", "time"]}

[dev-dependencies]
env_logger = "0.9"
