[package]
name = "web30"
version = "0.23.1"
authors = ["Michal Papierski", "Jehan Tremback", "Justin Kilpatrick"]
description = "Async endian safe web3 library"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/althea-net/web30"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clarity = "0.7"
num256 = "0.5"
futures = "0.3"
awc = {version = "3.1.1", default-features = false, features=["openssl", "compress-gzip", "compress-zstd"]}
tokio = {version = "1.21", features=["macros", "time"]}
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"

[dev-dependencies]
actix = "0.13"
env_logger = "0.10"

[patch.crates-io]
clarity = {git = "https://github.com/althea-net/clarity.git", ref = "112453b9c94d07246d48412b10d668cc4843b252"}